增加prom-dict模块
